testsuite/codegen/compile-fail/main-is-interface.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
// CHECK-L: main-is-interface.verona:${LINE:+1}:11: error: 'Main' must be a class
interface Main {
  main() { }
}
